--- a/src/navbar.css
+++ b/src/navbar.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  background-color: #fcfcfc;
+  background-color:whitesmoke;
 }
 
 .container {
@@ -19,7 +19,7 @@ body {
 
 .navbar {
   height: 60px;
-  background-color: #fef7e5;
+  background-color: palevioletred;
   position: relative;
 }
 
